# zaddr-wasm-parser

./: .gitignore  Cargo.toml  README.md  package.json  zcash_address_parser_test.html
example/: package-lock.json  package.json  vite.config.ts
example/src/: App.tsx
examples/example/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
examples/example/src/: App.tsx
src/: lib.rs
test-integration/: package-lock.json  package.json  test.js
tests/: lib_tests.rs  tex_generator.rs
ts-wrapper/: demo.ts  fuzz.test.ts  package-lock.json  package.json
ts-wrapper/src/: index.ts  types.ts
ts-wrapper/src/__mocks__/: index.ts
